solved overflow in mozila

--- a/ChurchApp/CSS/CustomCSS/AdminLayout.css
+++ b/ChurchApp/CSS/CustomCSS/AdminLayout.css
@@ -76,6 +76,7 @@ text-overflow: ellipsis;
 display: -webkit-box;
 -webkit-line-clamp: 2;
 -webkit-box-orient: vertical;
+max-height: 3.6em;
 
 
 }
